--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "idmesh-react",
-  "version": "0.9.0",
-  "description": "",
-  "main": "dist/sdk.js",
+  "version": "0.9.1",
+  "description": "IDMesh sdk wrapped for react 16+",
+  "main": "dist/idmesh-react.cjs.js",
+  "module": "dist/idmesh-react.esm.js",
   "types": "dist/typings/index.d.ts",
   "type": "module",
   "scripts": {
@@ -30,10 +31,10 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "react-dom": ">=16.11.0"
+    "react": "^16.11.0 || ^17 || ^18",
+    "react-dom": "^16.11.0 || ^17 || ^18"
   },
   "dependencies": {
-    "idmesh-spa-js": ">=0.9.0",
-    "react": ">=16.11.0"
+    "idmesh-spa-js": ">=0.9.1"
   }
 }
